--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
+<title>Hello World!</title>
 </head>
 <body>
-
+<h2 style="rigth:0em">功能实现</h2>
+		<p> 1.	SpringMVC，Hibernate 基于JPA的搭建；</p>
+		<p> 2. 添加了Spring Security安全框架 [功能已实现，尚未添加权限的业务处理];</p>
 </body>
 </html>
