--- a/src/main/webapp/default.html
+++ b/src/main/webapp/default.html
@@ -1,88 +1,244 @@
+
 <!DOCTYPE html>
-<!-- saved from url=(0049)http://v3.bootcss.com/examples/navbar-static-top/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html xmlns="http://www.w3.org/1999/html">
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="http://v3.bootcss.com/assets/ico/favicon.png">
+    <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, maximum-scale=1">
+    <meta name="description" content="Metro UI CSS 是一套用来创建类似于Windows 8 Metro UI风格网站的样式. 这组风格被开发成一个独立的基于Bootstrap的解决方案。">
+    <meta name="author" content="Bootstrap中文网">
+    <meta name="keywords" content="windows 8, modern style, Bootstrap,Metro UI, style, modern, css, framework">
 
-    <title>Static Top Navbar Example for Bootstrap</title>
+    <link href="css/modern.css" rel="stylesheet">
+    <link href="css/modern-responsive.css" rel="stylesheet">
+    <link href="css/site.css" rel="stylesheet" type="text/css">
+    <link href="//cdnjs.bootcss.com/ajax/libs/prettify/r224/prettify.css" rel="stylesheet" type="text/css">
 
-    <!-- Bootstrap core CSS -->
-    <link href="http://v3.bootcss.com/dist/css/bootstrap.css" rel="stylesheet">
+    <script type="text/javascript" src="//cdnjs.bootcss.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.bootcss.com/ajax/libs/jquery-mousewheel/3.0.6/jquery.mousewheel.min.js"></script>
 
-    <!-- Custom styles for this template -->
-    <link href="http://v3.bootcss.com/examples/navbar-static-top/navbar-static-top.css" rel="stylesheet">
+    <script type="text/javascript" src="js/modern/dropdown.js"></script>
+    <script type="text/javascript" src="js/modern/accordion.js"></script>
+    <script type="text/javascript" src="js/modern/buttonset.js"></script>
+    <script type="text/javascript" src="js/modern/carousel.js"></script>
+    <script type="text/javascript" src="js/modern/input-control.js"></script>
+    <script type="text/javascript" src="js/modern/pagecontrol.js"></script>
+    <script type="text/javascript" src="js/modern/rating.js"></script>
+    <script type="text/javascript" src="js/modern/slider.js"></script>
+    <script type="text/javascript" src="js/modern/tile-slider.js"></script>
+    <script type="text/javascript" src="js/modern/tile-drag.js"></script>
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
-    <![endif]-->
-  </head>
+    <title>全局样式 · Bootstrap Metro UI CSS 中文版</title>
+</head>
+<body class="modern-ui" onload="prettyPrint()">
 
-  <body style="">
+<div class="page">
+<div class="nav-bar">
+    <div class="nav-bar-inner padding10">
+        <span class="pull-menu"></span>
 
-    <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="http://v3.bootcss.com/examples/navbar-static-top/#">Project name</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="http://v3.bootcss.com/examples/navbar-static-top/#">Home</a></li>
-            <li><a href="http://v3.bootcss.com/examples/navbar-static-top/#about">About</a></li>
-            <li><a href="http://v3.bootcss.com/examples/navbar-static-top/#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="http://v3.bootcss.com/examples/navbar-static-top/#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="http://v3.bootcss.com/examples/navbar-static-top/#">Action</a></li>
-                <li><a href="http://v3.bootcss.com/examples/navbar-static-top/#">Another action</a></li>
-                <li><a href="http://v3.bootcss.com/examples/navbar-static-top/#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="http://v3.bootcss.com/examples/navbar-static-top/#">Separated link</a></li>
-                <li><a href="http://v3.bootcss.com/examples/navbar-static-top/#">One more separated link</a></li>
-              </ul>
+        <a href="index.html"><span class="element brand">
+            <img class="place-left" src="images/logo32.png" style="height: 20px"/>
+           Bootstrap Metro UI CSS 中文版 <small>0.15.8.12</small>
+        </span></a>
+
+        <div class="divider"></div>
+
+        <ul class="menu">
+            <li><a href="index.html">首页</a></li>
+            <li data-role="dropdown">
+                <a href="#">脚手架</a>
+                <ul class="dropdown-menu">
+                    <li><a href="global.html">全局样式</a></li>
+                    <li><a href="layout.html">布局与模板</a></li>
+                    <li><a href="grid.html">网格系统</a></li>
+                    <li class="divider"></li>
+                    <li><a href="responsive.html">响应式设计</a>
+                    </li>
+                </ul>
             </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://v3.bootcss.com/examples/navbar/">Default</a></li>
-            <li class="active"><a href="./Static Top Navbar Example for Bootstrap_files/Static Top Navbar Example for Bootstrap.htm">Static top</a></li>
-            <li><a href="http://v3.bootcss.com/examples/navbar-fixed-top/">Fixed top</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+             <li data-role="dropdown"><a href="#">基本样式</a>
+                <ul class="dropdown-menu">
+                    <li><a href="typography.html">排版</a></li>
+                    <li><a href="tables.html">表格</a></li>
+                    <li><a href="forms.html">表单</a></li>
+                    <li><a href="buttons.html">按钮</a></li>
+                    <li><a href="images.html">图像</a></li>
+                    <li class="divider"></li>
+                    <li><a href="icons.html">图标</a></li>
+                </ul>
+            </li>
+             <li data-role="dropdown"><a href="#">组件</a>
+                <ul class="dropdown-menu">
+                    <li><a href="tiles.html">Tiles</a></li>
+                    <li><a href="menus.html">菜单与导航</a></li>
+                    <li><a href="sidebar.html">侧边栏</a></li>
+                    <li><a href="pagecontrol.html">多页控件</a></li>
+                    <li><a href="accordion.html">手风琴</a></li>
+                    <li><a href="buttons-set.html">按钮组</a></li>
+                    <li><a href="rating.html">评分</a></li>
+                    <li><a href="progress.html">进度条</a></li>
+                    <li><a href="carousel.html">幻灯片</a></li>
+                    <li><a href="listview.html">列表视图</a></li>
+                    <li><a href="slider.html">滑块</a></li>
+                    <li><a href="dialog.html">对话框</a></li>
+                    <li class="divider"></li>
+                    <li><a href="notices.html">通知与回复</a></li>
+                    <li class="divider"></li>
+                    <li><a href="cards.html">额外惊喜 - 一副扑克</a></li>
+                </ul>
+            </li>
+
+            <li><a href="https://github.com/olton/Metro-UI-CSS" target="_blank">源码</a></li>
+        </ul>
+
+    </div>
+</div>
+</div>
+
+<div class="page secondary">
+        <div class="page-header">
+            <div class="page-header-content">
+                <h1>全局<small>样式</small></h1>
+                <a class="back-button big page-back" href="/"></a>
+            </div>
+        </div>
+
+        <div class="page-region">
+            <div class="page-region-content">
+                <div class="grid">
+                    <div class="row">
+                        <div class="span10">
+                            <h2>必须使用HTML5 doctype</h2>
+                            <p>Metro UI CSS使用了某些HTML元素和CSS属性,它们需要使用HTML5 doctype。 将HTML5 doctype应用在你所有的项目中。</p>
+
+<pre class="prettyprint linenums"><ol class="linenums"><li class="L0"><span class="pln">    </span><span class="dec">&lt;!DOCTYPE html&gt;</span></li><li class="L1"><span class="pln">    </span><span class="tag">&lt;html</span><span class="pln"> </span><span class="atn">lang</span><span class="pun">=</span><span class="atv">"en"</span><span class="tag">&gt;</span></li><li class="L2"><span class="pln">      ...</span></li><li class="L3"><span class="pln">    </span><span class="tag">&lt;/html&gt;</span></li></ol></pre>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="span10">
+                            <h2>重置样式</h2>
+                            <p>
+                               在Metro UI CSS使用的是<a href="http://nicolasgallagher.com/">Nicolas Gallaher</a>写的<a href="http://github.com/necolas/normalize.css">normalize.css</a>。
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="span3">
+                            <h2>颜色</h2>
+                            <ul class="unstyled">
+                                <li style="height: 40px;"><span class="square bg-color-green"></span>*-color-green</li>
+                                <li style="height: 40px;"><span class="square bg-color-greenDark"></span>*-color-greenDark</li>
+                                <li style="height: 40px;"><span class="square bg-color-greenLight"></span>*-color-greenLight</li>
+                                <li style="height: 40px;"><span class="square bg-color-pink"></span>*-color-pink</li>
+                                <li style="height: 40px;"><span class="square bg-color-pinkDark"></span>*-color-pinkDark</li>
+                            </ul>
+                        </div>
+                        <div class="span3">
+                            <h2>&nbsp;</h2>
+                            <ul class="unstyled">
+                                <li style="height: 40px;"><span class="square bg-color-yellow"></span>*-color-yellow</li>
+                                <li style="height: 40px;"><span class="square bg-color-darken"></span>*-color-darken</li>
+                                <li style="height: 40px;"><span class="square bg-color-purple"></span>*-color-purple</li>
+                                <li style="height: 40px;"><span class="square bg-color-blue"></span>*-color-blue</li>
+                                <li style="height: 40px;"><span class="square bg-color-blueDark"></span>*-color-blueDark</li>
+                            </ul>
+                        </div>
+                        <div class="span3">
+                            <h2>&nbsp;</h2>
+                            <ul class="unstyled">
+                                <li style="height: 40px;"><span class="square bg-color-blueLight"></span>*-color-blueLight</li>
+                                <li style="height: 40px;"><span class="square bg-color-orange"></span>*-color-orange</li>
+                                <li style="height: 40px;"><span class="square bg-color-orangeDark"></span>*-color-orangeDark</li>
+                                <li style="height: 40px;"><span class="square bg-color-red"></span>*-color-red</li>
+                                <li style="height: 40px;"><span class="square bg-color-white"></span>*-color-white</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="span10">
+                            <p>设置背景元素时添加前缀<strong>bg</strong>,设置文本颜色时添加前缀 <strong>fg</strong></p>
+<pre class="prettyprint linenums"><ol class="linenums"><li class="L0"><span class="pln">    </span><span class="tag">&lt;div</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"bg-color-red"</span><span class="tag">&gt;</span><span class="pln">...</span><span class="tag">&lt;/div&gt;</span></li><li class="L1"><span class="pln">    </span><span class="tag">&lt;span</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"fg-color-blue"</span><span class="tag">&gt;</span><span class="pln">...</span><span class="tag">&lt;/span&gt;</span></li></ol></pre>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="span10">
+                            <p>设置边框颜色时添加前缀 <strong>border</strong></p>
+                            <div class="clearfix">
+                                <div class="span2 border-color-blue">
+                                    &nbsp;
+                                </div>
+                                <div class="span2 border-color-green">
+                                    &nbsp;
+                                </div>
+                                <div class="span2 border-color-red">
+                                    &nbsp;
+                                </div>
+                                <div class="span2 border-color-orange">
+                                    &nbsp;
+                                </div>
+                                <div class="span2 border-color-darken">
+                                    &nbsp;
+                                </div>
+                            </div>
+<pre class="prettyprint linenums"><ol class="linenums"><li class="L0"><span class="pln">    </span><span class="tag">&lt;div</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"border-color-red"</span><span class="tag">&gt;</span><span class="pln">...</span><span class="tag">&lt;/div&gt;</span></li></ol></pre>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="span10">
+                            <p>为组件(比如tile, 列表项,等等.)添加轮廓outline时使用前缀 <strong>outline</strong></p>
+                            <div class="clearfix">
+                                <div class="tile outline-color-blue">
+                                    &nbsp;
+                                </div>
+                                <div class="tile outline-color-green">
+                                    &nbsp;
+                                </div>
+                                <div class="tile outline-color-red">
+                                    &nbsp;
+                                </div>
+                                <div class="tile outline-color-orange">
+                                    &nbsp;
+                                </div>
+                            </div>
+<pre class="prettyprint linenums"><ol class="linenums"><li class="L0"><span class="pln">    </span><span class="tag">&lt;div</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"tile outline-color-red"</span><span class="tag">&gt;</span><span class="pln">...</span><span class="tag">&lt;/div&gt;</span></li></ol></pre>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="span10">
+                            <h2>字体</h2>
+                            <p class="span10">
+                               在Metro UI CSS 中，我使用Segoe UI、<a href="http://www.google.com/webfonts#UsePlace:use/Collection:Open+Sans">Open Sans</a>字体(取决于系统是否支持).
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grid">
+                    <div class="row">
+                                            </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="page">
+        <div class="nav-bar">
+            <div class="nav-bar-inner padding10">
+                <span class="element">
+                    2012, Metro UI CSS &copy; by <a class="fg-color-white" href="mailto:sergey@pimenov.com.ua">Sergey Pimenov</a>.
+
+                    Metro UI CSS 由<a href="http://www.bootcss.com/" class="fg-color-white">Bootstrap中文网</a>翻译整理
+                </span>
+            </div>
+        </div>
     </div>
 
 
-    <div class="container">
+    <script type="text/javascript" src="//cdnjs.bootcss.com/ajax/libs/prettify/r224/prettify.js"></script>
 
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>To see the difference between static and fixed top navbars, just scroll.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="http://v3.bootcss.com/components/#navbar" role="button">View navbar docs »</a>
-        </p>
-      </div>
-
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./Static Top Navbar Example for Bootstrap_files/jquery.js"></script>
-    <script src="./Static Top Navbar Example for Bootstrap_files/bootstrap.min.js"></script>
-  
-
-</body></html>
+    <script src="/p/projects.js"></script>
+    </body>
+</html>
